# InvestorCrew

./: .gitignore  README.md  pyproject.toml
data/fixtures/companies/: apple.json  googl.json  jpm.json  nvda.json  oklo.json  xom.json
data/fixtures/macro/: us_global.json
data/investors/: benjamin_graham.json  cathie_wood.json  charlie_munger.json  george_soros.json  howard_marks.json  john_templeton.json  peter_lynch.json  ray_dalio.json  stanley_druckenmiller.json  warren_buffett.json
investorcrew/: __init__.py  __main__.py  api.py  artifacts.py  classification.py  cli.py  config.py  data_store.py  debate.py  diligence.py  events.py  metric_selection.py  models.py  planning.py  prompts.py  providers.py  render.py  review.py  service.py  store.py  technical_review.py
tests/: test_investorcrew.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/ask/: page.tsx
web/app/configure/: page.tsx
web/components/: app-shell.tsx  ask-runner.tsx  company-list.tsx  company-workspace.tsx  configure-dashboard.tsx  data-view.tsx  report-detail.tsx
web/lib/: api.ts  types.ts
